# tmygen

./: LICENSE  README.md  pyproject.toml
tests/: test_fs_rank.py
tmygen/: __init__.py  cli.py  fs_rank.py  selector.py  smoother.py
